--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   flutter_card_swiper: ^5.1.0
   card_swiper: ^2.0.4
   extended_image: ^8.0.2
-  bookfx: ^0.0.2
+  status_bar_control: ^3.2.1
+  bot_toast: ^4.0.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
