--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
-  flutter_card_swiper: ^5.1.0
+  dotted_line: ^3.1.0
   card_swiper: ^2.0.4
   extended_image: ^8.0.2
   status_bar_control: ^3.2.1
