--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   dotted_line: ^3.1.0
   card_swiper: ^2.0.4
   extended_image: ^8.0.2
-
+  flutter_widget_from_html: ^0.10.1
   status_bar_control: ^3.2.1
   bot_toast: ^4.0.4
 dev_dependencies:
@@ -66,6 +66,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+
+
   fonts:
     - family: ZCOOLXiaoWei
       fonts:
