--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,12 @@ dependencies:
   dotted_line: ^3.1.0
   card_swiper: ^2.0.4
   extended_image: ^8.0.2
-  flutter_html: ^2.2.1
+
 
   status_bar_control: ^3.2.1
   bot_toast: ^4.0.4
-  html: ^0.15.4
+
+#  html: ^0.15.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
