--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   dotted_line: ^3.1.0
   card_swiper: ^2.0.4
   extended_image: ^8.0.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 
   status_bar_control: ^3.2.1
@@ -49,6 +51,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.0
+  build_runner: ^2.4.5
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
