--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,7 @@ dependencies:
   extended_image: ^8.0.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-
-
+  screen_brightness: ^0.2.2
   status_bar_control: ^3.2.1
   bot_toast: ^4.0.4
 
