--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,13 +46,23 @@ dependencies:
   status_bar_control: ^3.2.1
   bot_toast: ^4.0.4
 
+
+
 #  html: ^0.15.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
   hive_generator: ^2.0.0
   build_runner: ^2.4.5
-
+  flutter_layout_grid: any
+  flutter_svg: any
+  flutter_math_fork: any
+  collection: any
+  numerus: any
+  text_composition:
+    git:
+      url: https://gitee.com/jason_xuj/text_composition.git
+  html: ^0.15.4
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
