--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,7 @@ dependencies:
   screen_brightness: ^0.2.2
   status_bar_control: ^3.2.1
   bot_toast: ^4.0.4
-
-
-
+  wechat_kit: ^6.0.1
 #  html: ^0.15.4
 dev_dependencies:
   flutter_test:
