--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,12 @@ dependencies:
   status_bar_control: ^3.2.1
   bot_toast: ^4.0.4
   wechat_kit: ^6.0.1
-  flutter_tts: ^3.7.0
+
+  dio: ^5.2.0+1
+  pretty_dio_logger: ^1.3.1
+  freezed_annotation: ^2.2.0
+  connectivity_plus: ^4.0.1
+  home_widget: ^0.2.1
 #  html: ^0.15.4
 dev_dependencies:
   flutter_test:
