--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   status_bar_control: ^3.2.1
   bot_toast: ^4.0.4
   wechat_kit: ^6.0.1
-
+  wechat_kit_extension: ^1.0.1
   dio: ^5.2.0+1
   pretty_dio_logger: ^1.3.1
   freezed_annotation: ^2.2.0
