--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   dio: ^5.2.0+1
   pretty_dio_logger: ^1.3.1
   freezed_annotation: ^2.2.0
+  scrollable_positioned_list: ^0.3.8
+  dio_cache_interceptor: ^3.4.2
+  dio_cache_interceptor_hive_store: ^3.2.1
   connectivity_plus: ^4.0.1
   home_widget: ^0.2.1
 #  html: ^0.15.4
