--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   dio_cache_interceptor_hive_store: ^3.2.1
   connectivity_plus: ^4.0.1
   home_widget: ^0.2.1
+  flutter_tts: ^3.7.0
 #  html: ^0.15.4
 dev_dependencies:
   flutter_test:
