--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   connectivity_plus: ^4.0.1
   home_widget: ^0.2.1
   flutter_tts: ^3.7.0
+  slide_countdown: ^0.6.0
 #  html: ^0.15.4
 dev_dependencies:
   flutter_test:
