--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   flutter_tts: ^3.7.0
   slide_countdown: ^0.6.0
   rxdart: ^0.27.7
+  package_info_plus: ^4.0.2
 #  html: ^0.15.4
 dev_dependencies:
   flutter_test:
