--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -16,6 +16,11 @@
 	<string>huaxia</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
+	  <key>UIBackgroundModes</key>
+        <array>
+
+         <string>location</string>
+        </array>
 	<key>CFBundleShortVersionString</key>
 	<string>$(FLUTTER_BUILD_NAME)</string>
 	<key>CFBundleSignature</key>
