--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,9 @@ dependencies:
   flutter_tts: ^3.7.0
   slide_countdown: ^0.6.0
   rxdart: ^0.27.7
+  permission_handler: ^10.4.3
+  image_gallery_saver: ^2.0.3
+  flustars_flutter3: ^3.0.0
   package_info_plus: ^4.0.2
 #  html: ^0.15.4
 dev_dependencies:
