--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   slide_countdown: ^0.6.0
   rxdart: ^0.27.7
   flutter_inappwebview: ^5.7.2+3
+  pull_to_refresh: ^2.0.0
   permission_handler: ^10.4.3
   image_gallery_saver: ^2.0.3
   flustars_flutter3: ^3.0.0
